Bug 207637. Don't fire onchange for MouseUp events where we didn't see a mousedown. r+sr=dbaron,a=asa